# speex

./: .gitignore  CMakeLists.txt
include/speex/: speex.h  speex_bits.h  speex_callbacks.h  speex_header.h  speex_stereo.h  speex_types.h
libspeex/: CMakeLists.txt  modes.c  modes_wb.c  nb_celp.c
win32/: config.h
